@@ -48,22 +48,6 @@ in a view widget.
 </para>
 
 
-<!-- ##### SIGNAL GtkSourceBuffer::can-redo ##### -->
-<para>
-
-</para>
-
-@sourcebuffer: the object which received the signal.
-@arg1: 
-
-<!-- ##### SIGNAL GtkSourceBuffer::can-undo ##### -->
-<para>
-
-</para>
-
-@sourcebuffer: the object which received the signal.
-@arg1: 
-
 <!-- ##### SIGNAL GtkSourceBuffer::highlight-updated ##### -->
 <para>
 
@@ -80,6 +64,16 @@ in a view widget.
 
 @sourcebuffer: the object which received the signal.
 @arg1: 
+
+<!-- ##### ARG GtkSourceBuffer:can-redo ##### -->
+<para>
+
+</para>
+
+<!-- ##### ARG GtkSourceBuffer:can-undo ##### -->
+<para>
+
+</para>
 
 <!-- ##### ARG GtkSourceBuffer:check-brackets ##### -->
 <para>
@@ -112,8 +106,6 @@ in a view widget.
 </para>
 
 @parent_class: 
-@can_undo: 
-@can_redo: 
 @highlight_updated: 
 @marker_updated: 
 @debug: 
